# OPMORL-2.0

./: .gitignore  CMakeLists.txt  README  README.md  ideas.md  init.c  io.c  lib.c  linkedlist.c  linkedlist.h  map.c  opmorl.c  opmorl.h  player.c  turn.c
dat/: grid.txt  intro.txt
src/: init.c  inv.c  io.c  lib.c  lib.h  linkedlist.c  linkedlist.h  map.c  monster.c  object.c  opmorl.c  opmorl.h  path.c  player.c  turn.c  use.c
